--- a/Arezzo/ressources/fxml/menu.fxml
+++ b/Arezzo/ressources/fxml/menu.fxml
@@ -1,34 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.input.KeyCodeCombination?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.input.*?>
+<?import javafx.scene.layout.*?>
 
-<Pane fx:id="menu" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="29.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vues.VueMenu">
-   <children>
-      <MenuBar prefHeight="29.0" prefWidth="600.0">
-        <menus>
-          <Menu mnemonicParsing="false" text="Melodie">
-            <items>
-              <MenuItem mnemonicParsing="false" onAction="#testT" text="Nouveau" />
-                  <MenuItem mnemonicParsing="false" text="Ouvrir" />
-                  <MenuItem mnemonicParsing="false" text="Enregistrer sous ..." />
-                  <MenuItem mnemonicParsing="false" text="Quitter">
-                     <accelerator>
-                        <KeyCodeCombination alt="UP" code="Q" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
-                     </accelerator>
-                  </MenuItem>
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Outils">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Renommer" />
-                  <MenuItem mnemonicParsing="false" text="Transposer" />
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
-   </children>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="29.0"
+      prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="vues.VueMenu">
+    <MenuBar prefHeight="29.0" prefWidth="600.0">
+        <Menu mnemonicParsing="false" text="Melodie">
+            <MenuItem mnemonicParsing="false" onAction="#nouveauFichier" text="Nouveau"/>
+            <MenuItem mnemonicParsing="false" onAction="#ouvrirFichier" text="Ouvrir"/>
+            <MenuItem mnemonicParsing="false" onAction="#enregistrerSous" text="Enregistrer sous ..."/>
+            <MenuItem mnemonicParsing="false" onAction="#quitterFenetre" text="Quitter">
+                <accelerator>
+                    <KeyCodeCombination alt="UP" code="Q" control="DOWN" meta="UP" shift="UP" shortcut="UP"/>
+                </accelerator>
+            </MenuItem>
+        </Menu>
+        <Menu mnemonicParsing="false" text="Outils">
+            <MenuItem mnemonicParsing="false" onAction="#renommerNotes" text="Renommer"/>
+            <MenuItem mnemonicParsing="false" onAction="#transposerNotes" text="Transposer"/>
+        </Menu>
+    </MenuBar>
 </Pane>
