--- a/Arezzo/ressources/fxml/piano.fxml
+++ b/Arezzo/ressources/fxml/piano.fxml
@@ -1,40 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
 
-<FlowPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1">
-    <children>
-        <Pane prefHeight="35.0">
-            <children>
-                <Label alignment="TOP_CENTER" layoutX="14.0" layoutY="-2.0" prefHeight="7.0" prefWidth="587.0" text="Titre">
-                    <font>
-                        <Font name="Amiri" size="20.0" />
-                    </font>
-                </Label>
-            </children>
-        </Pane>
-        <ScrollPane prefHeight="174.0" prefWidth="509.0">
-            <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="262.0" prefWidth="484.0" />
-            </content>
-        </ScrollPane>
-        <Button mnemonicParsing="false" prefHeight="174.0" prefWidth="91.0" text="Les notes" />
-        <HBox prefHeight="191.0" prefWidth="600.0">
-            <children>
-                <VBox prefHeight="191.0" prefWidth="201.0">
-                    <children>
-                        <HBox prefHeight="164.0" prefWidth="201.0" />
-                        <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="209.0" text="Chuuuuuut" />
-                    </children>
-                </VBox>
-            </children></HBox>
-    </children>
-</FlowPane>
+<AnchorPane prefHeight="319.0" prefWidth="360.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="vues.VuePiano">
+    <Rectangle arcHeight="5.0" arcWidth="5.0" onMouseClicked="#jouerLa" fill="WHITE" height="319.0" stroke="BLACK"
+               strokeType="INSIDE" width="52.0"/>
+    <Rectangle arcHeight="5.0" arcWidth="5.0" onMouseClicked="#jouerSi" fill="WHITE" height="319.0" layoutX="52.0"
+               stroke="BLACK" strokeType="INSIDE" width="52.0"/>
+    <Rectangle arcHeight="5.0" arcWidth="5.0" onMouseClicked="#jouerDo" fill="WHITE" height="319.0" layoutX="104.0"
+               stroke="BLACK" strokeType="INSIDE" width="52.0"/>
+    <Rectangle arcHeight="5.0" arcWidth="5.0" onMouseClicked="#jouerRe" fill="WHITE" height="319.0" layoutX="156.0"
+               stroke="BLACK" strokeType="INSIDE" width="52.0"/>
+    <Rectangle arcHeight="5.0" arcWidth="5.0" onMouseClicked="#jouerMi" fill="WHITE" height="319.0" layoutX="208.0"
+               stroke="BLACK" strokeType="INSIDE" width="52.0"/>
+    <Rectangle arcHeight="5.0" arcWidth="5.0" onMouseClicked="#jouerFa" fill="WHITE" height="319.0" layoutX="260.0"
+               stroke="BLACK" strokeType="INSIDE" width="52.0"/>
+    <Rectangle arcHeight="5.0" arcWidth="5.0" onMouseClicked="#jouerSol" fill="WHITE" height="319.0" layoutX="312.0"
+               stroke="BLACK" strokeType="INSIDE" width="52.0"/>
+    <Rectangle arcHeight="5.0" arcWidth="5.0" onMouseClicked="#jouerLaDiese" height="154.0" layoutX="26.0"
+               stroke="BLACK" strokeType="INSIDE" width="42.0"/>
+    <Rectangle arcHeight="5.0" arcWidth="5.0" onMouseClicked="#jouerSolDiese" height="154.0" layoutX="88.0"
+               stroke="BLACK" strokeType="INSIDE" width="42.0"/>
+    <Rectangle arcHeight="5.0" arcWidth="5.0" onMouseClicked="#jouerDoDiese" height="154.0" layoutX="182.0"
+               stroke="BLACK" strokeType="INSIDE" width="42.0"/>
+    <Rectangle arcHeight="5.0" arcWidth="5.0" onMouseClicked="#jouerReDiese" height="154.0" layoutX="239.0"
+               stroke="BLACK" strokeType="INSIDE" width="42.0"/>
+    <Rectangle arcHeight="5.0" arcWidth="5.0" onMouseClicked="#jouerSolDiese" height="154.0" layoutX="296.0"
+               stroke="BLACK" strokeType="INSIDE" width="42.0"/>
+</AnchorPane>
