--- a/Arezzo/ressources/fxml/menu.fxml
+++ b/Arezzo/ressources/fxml/menu.fxml
@@ -4,23 +4,22 @@
 <?import javafx.scene.input.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="29.0"
-      prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="vues.VueMenu">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="56.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vues.VueMenu">
     <MenuBar prefHeight="29.0" prefWidth="600.0">
         <Menu mnemonicParsing="false" text="Melodie">
-            <MenuItem mnemonicParsing="false" onAction="#nouveauFichier" text="Nouveau"/>
-            <MenuItem mnemonicParsing="false" onAction="#ouvrirFichier" text="Ouvrir"/>
-            <MenuItem mnemonicParsing="false" onAction="#enregistrerSous" text="Enregistrer sous ..."/>
+            <MenuItem mnemonicParsing="false" onAction="#nouveauFichier" text="Nouveau" />
+            <MenuItem mnemonicParsing="false" onAction="#ouvrirFichier" text="Ouvrir" />
+            <MenuItem mnemonicParsing="false" onAction="#enregistrerSous" text="Enregistrer sous ..." />
             <MenuItem mnemonicParsing="false" onAction="#quitterFenetre" text="Quitter">
                 <accelerator>
-                    <KeyCodeCombination alt="UP" code="Q" control="DOWN" meta="UP" shift="UP" shortcut="UP"/>
+                    <KeyCodeCombination alt="UP" code="Q" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
                 </accelerator>
             </MenuItem>
         </Menu>
         <Menu mnemonicParsing="false" text="Outils">
-            <MenuItem mnemonicParsing="false" onAction="#renommerNotes" text="Renommer"/>
-            <MenuItem mnemonicParsing="false" onAction="#transposerNotes" text="Transposer"/>
+            <MenuItem mnemonicParsing="false" onAction="#renommerNotes" text="Renommer" />
+            <MenuItem mnemonicParsing="false" onAction="#transposerNotes" text="Transposer" />
         </Menu>
     </MenuBar>
+   <Label alignment="CENTER" layoutY="28.0" prefHeight="29.0" prefWidth="600.0" text="Nouveau projet" />
 </Pane>
