--- a/Arezzo/ressources/fxml/piano.fxml
+++ b/Arezzo/ressources/fxml/piano.fxml
@@ -1,32 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.*?>
 
-<AnchorPane prefHeight="319.0" prefWidth="360.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="vues.VuePiano">
-    <Rectangle arcHeight="5.0" arcWidth="5.0" onMouseClicked="#jouerLa" fill="WHITE" height="319.0" stroke="BLACK"
-               strokeType="INSIDE" width="52.0"/>
-    <Rectangle arcHeight="5.0" arcWidth="5.0" onMouseClicked="#jouerSi" fill="WHITE" height="319.0" layoutX="52.0"
-               stroke="BLACK" strokeType="INSIDE" width="52.0"/>
-    <Rectangle arcHeight="5.0" arcWidth="5.0" onMouseClicked="#jouerDo" fill="WHITE" height="319.0" layoutX="104.0"
-               stroke="BLACK" strokeType="INSIDE" width="52.0"/>
-    <Rectangle arcHeight="5.0" arcWidth="5.0" onMouseClicked="#jouerRe" fill="WHITE" height="319.0" layoutX="156.0"
-               stroke="BLACK" strokeType="INSIDE" width="52.0"/>
-    <Rectangle arcHeight="5.0" arcWidth="5.0" onMouseClicked="#jouerMi" fill="WHITE" height="319.0" layoutX="208.0"
-               stroke="BLACK" strokeType="INSIDE" width="52.0"/>
-    <Rectangle arcHeight="5.0" arcWidth="5.0" onMouseClicked="#jouerFa" fill="WHITE" height="319.0" layoutX="260.0"
-               stroke="BLACK" strokeType="INSIDE" width="52.0"/>
-    <Rectangle arcHeight="5.0" arcWidth="5.0" onMouseClicked="#jouerSol" fill="WHITE" height="319.0" layoutX="312.0"
-               stroke="BLACK" strokeType="INSIDE" width="52.0"/>
-    <Rectangle arcHeight="5.0" arcWidth="5.0" onMouseClicked="#jouerLaDiese" height="154.0" layoutX="26.0"
-               stroke="BLACK" strokeType="INSIDE" width="42.0"/>
-    <Rectangle arcHeight="5.0" arcWidth="5.0" onMouseClicked="#jouerSolDiese" height="154.0" layoutX="88.0"
-               stroke="BLACK" strokeType="INSIDE" width="42.0"/>
-    <Rectangle arcHeight="5.0" arcWidth="5.0" onMouseClicked="#jouerDoDiese" height="154.0" layoutX="182.0"
-               stroke="BLACK" strokeType="INSIDE" width="42.0"/>
-    <Rectangle arcHeight="5.0" arcWidth="5.0" onMouseClicked="#jouerReDiese" height="154.0" layoutX="239.0"
-               stroke="BLACK" strokeType="INSIDE" width="42.0"/>
-    <Rectangle arcHeight="5.0" arcWidth="5.0" onMouseClicked="#jouerSolDiese" height="154.0" layoutX="296.0"
-               stroke="BLACK" strokeType="INSIDE" width="42.0"/>
+<AnchorPane prefHeight="351.0" prefWidth="364.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vues.VuePiano">
+    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="319.0" onMouseClicked="#jouerLa" stroke="BLACK" strokeType="INSIDE" width="52.0" />
+    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="319.0" layoutX="52.0" onMouseClicked="#jouerSi" stroke="BLACK" strokeType="INSIDE" width="52.0" />
+    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="319.0" layoutX="104.0" onMouseClicked="#jouerDo" stroke="BLACK" strokeType="INSIDE" width="52.0" />
+    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="319.0" layoutX="156.0" onMouseClicked="#jouerRe" stroke="BLACK" strokeType="INSIDE" width="52.0" />
+    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="319.0" layoutX="208.0" onMouseClicked="#jouerMi" stroke="BLACK" strokeType="INSIDE" width="52.0" />
+    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="319.0" layoutX="260.0" onMouseClicked="#jouerFa" stroke="BLACK" strokeType="INSIDE" width="52.0" />
+    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="319.0" layoutX="312.0" onMouseClicked="#jouerSol" stroke="BLACK" strokeType="INSIDE" width="52.0" />
+    <Rectangle arcHeight="5.0" arcWidth="5.0" height="154.0" layoutX="26.0" onMouseClicked="#jouerLaDiese" stroke="BLACK" strokeType="INSIDE" width="42.0" />
+    <Rectangle arcHeight="5.0" arcWidth="5.0" height="154.0" layoutX="88.0" onMouseClicked="#jouerSolDiese" stroke="BLACK" strokeType="INSIDE" width="42.0" />
+    <Rectangle arcHeight="5.0" arcWidth="5.0" height="154.0" layoutX="182.0" onMouseClicked="#jouerDoDiese" stroke="BLACK" strokeType="INSIDE" width="42.0" />
+    <Rectangle arcHeight="5.0" arcWidth="5.0" height="154.0" layoutX="239.0" onMouseClicked="#jouerReDiese" stroke="BLACK" strokeType="INSIDE" width="42.0" />
+    <Rectangle arcHeight="5.0" arcWidth="5.0" height="154.0" layoutX="296.0" onMouseClicked="#jouerSolDiese" stroke="BLACK" strokeType="INSIDE" width="42.0" />
+   <Button layoutY="319.0" mnemonicParsing="false" onMouseClicked="#jouerSilence" prefHeight="32.0" prefWidth="364.0" text="Chuuuuuuut" />
 </AnchorPane>
