--- a/arezzo/ressources/fxml/piano.fxml
+++ b/arezzo/ressources/fxml/piano.fxml
@@ -12,10 +12,10 @@
     <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="280.0" layoutX="168.0" onMouseClicked="#jouerMi" stroke="BLACK" strokeType="INSIDE" width="42.0" />
     <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="280.0" layoutX="210.0" onMouseClicked="#jouerFa" stroke="BLACK" strokeType="INSIDE" width="42.0" />
     <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="280.0" layoutX="252.0" onMouseClicked="#jouerSol" stroke="BLACK" strokeType="INSIDE" width="42.0" />
-    <Rectangle arcHeight="5.0" arcWidth="5.0" height="154.0" layoutX="73.0" onMouseClicked="#jouerSolDiese" stroke="BLACK" strokeType="INSIDE" width="32.0" />
+    <Rectangle arcHeight="5.0" arcWidth="5.0" height="154.0" layoutX="73.0" onMouseClicked="#jouerDoDiese" stroke="BLACK" strokeType="INSIDE" width="32.0" />
     <Rectangle arcHeight="5.0" arcWidth="5.0" height="154.0" layoutX="21.0" onMouseClicked="#jouerLaDiese" stroke="BLACK" strokeType="INSIDE" width="32.0" />
-    <Rectangle arcHeight="5.0" arcWidth="5.0" height="154.0" layoutX="147.0" onMouseClicked="#jouerDoDiese" stroke="BLACK" strokeType="INSIDE" width="32.0" />
-    <Rectangle arcHeight="5.0" arcWidth="5.0" height="154.0" layoutX="194.0" onMouseClicked="#jouerReDiese" stroke="BLACK" strokeType="INSIDE" width="32.0" />
+    <Rectangle arcHeight="5.0" arcWidth="5.0" height="154.0" layoutX="147.0" onMouseClicked="#jouerReDiese" stroke="BLACK" strokeType="INSIDE" width="32.0" />
+    <Rectangle arcHeight="5.0" arcWidth="5.0" height="154.0" layoutX="194.0" onMouseClicked="#jouerFaDiese" stroke="BLACK" strokeType="INSIDE" width="32.0" />
     <Rectangle arcHeight="5.0" arcWidth="5.0" height="154.0" layoutX="241.0" onMouseClicked="#jouerSolDiese" stroke="BLACK" strokeType="INSIDE" width="32.0" />
    <Button layoutY="280.0" mnemonicParsing="false" onMouseClicked="#jouerSilence" prefHeight="32.0" prefWidth="294.0" text="Chuuuuuuut" />
 </AnchorPane>
