--- a/arezzo/ressources/fxml/instruments.fxml
+++ b/arezzo/ressources/fxml/instruments.fxml
@@ -8,14 +8,14 @@
 <AnchorPane prefHeight="284.0" prefWidth="150.0" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vues.VueInstruments">
    <children>
       <ChoiceBox fx:id="boxInstruments" layoutY="0.0" prefWidth="150.0" />
-      <RadioButton fx:id="aigu" layoutX="6.0" layoutY="57.0" mnemonicParsing="false" text="Aigu" />
-      <RadioButton fx:id="croche" layoutX="6.0" layoutY="81.0" mnemonicParsing="false" selected="true" text="Medium" />
-      <RadioButton fx:id="grave" layoutX="6.0" layoutY="106.0" mnemonicParsing="false" text="Grave" />
+      <RadioButton fx:id="aigu" layoutX="6.0" layoutY="57.0" mnemonicParsing="false" onAction="#setAigu" text="Aigu" />
+      <RadioButton fx:id="medium" layoutX="6.0" layoutY="81.0" mnemonicParsing="false" onAction="#setMedium" selected="true" text="Medium" />
+      <RadioButton fx:id="grave" layoutX="6.0" layoutY="106.0" mnemonicParsing="false" onAction="#setGrave" text="Grave" />
       <Line endX="50.0" layoutX="100.0" layoutY="50.0" startX="-100.0" />
       <Line endX="50.0" layoutX="100.0" layoutY="133.0" startX="-100.0" />
-      <RadioButton fx:id="ronde" layoutX="7.0" layoutY="142.0" mnemonicParsing="false" onAction="#setForme" />
-      <RadioButton fx:id="blanche" layoutX="7.0" layoutY="167.0" mnemonicParsing="false" onAction="#setForme" />
-      <RadioButton fx:id="noire" layoutX="7.0" layoutY="192.0" mnemonicParsing="false" onAction="#setForme" />
-      <RadioButton fx:id="croche" layoutX="7.0" layoutY="217.0" mnemonicParsing="false" onAction="#setForme" selected="true" />
+      <RadioButton fx:id="ronde" layoutX="7.0" layoutY="142.0" mnemonicParsing="false" onAction="#setRonde" />
+      <RadioButton fx:id="blanche" layoutX="7.0" layoutY="167.0" mnemonicParsing="false" onAction="#setBlanche" />
+      <RadioButton fx:id="noire" layoutX="7.0" layoutY="192.0" mnemonicParsing="false" onAction="#setNoire" />
+      <RadioButton fx:id="croche" layoutX="7.0" layoutY="217.0" mnemonicParsing="false" onAction="#setCroche" selected="true" />
    </children>
 </AnchorPane>
