Factorisation du codes et séparation en plus de fonctions pour le piano.

--- a/arezzo/src/vues/piano.fxml
+++ b/arezzo/src/vues/piano.fxml
@@ -5,17 +5,17 @@
 <?import javafx.scene.shape.Rectangle?>
 
 <AnchorPane prefHeight="297.0" prefWidth="294.0" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ecouteur.EcouteurPiano">
-    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="280.0" onMouseClicked="#jouerLa" stroke="BLACK" strokeType="INSIDE" width="42.0" />
-    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="280.0" layoutX="42.0" onMouseClicked="#jouerSi" stroke="BLACK" strokeType="INSIDE" width="42.0" />
-    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="280.0" layoutX="84.0" onMouseClicked="#jouerDo" stroke="BLACK" strokeType="INSIDE" width="42.0" />
-    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="280.0" layoutX="126.0" onMouseClicked="#jouerRe" stroke="BLACK" strokeType="INSIDE" width="42.0" />
-    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="280.0" layoutX="168.0" onMouseClicked="#jouerMi" stroke="BLACK" strokeType="INSIDE" width="42.0" />
-    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="280.0" layoutX="210.0" onMouseClicked="#jouerFa" stroke="BLACK" strokeType="INSIDE" width="42.0" />
-    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="280.0" layoutX="252.0" onMouseClicked="#jouerSol" stroke="BLACK" strokeType="INSIDE" width="42.0" />
-    <Rectangle arcHeight="5.0" arcWidth="5.0" height="154.0" layoutX="73.0" onMouseClicked="#jouerDoDiese" stroke="BLACK" strokeType="INSIDE" width="32.0" />
-    <Rectangle arcHeight="5.0" arcWidth="5.0" height="154.0" layoutX="21.0" onMouseClicked="#jouerLaDiese" stroke="BLACK" strokeType="INSIDE" width="32.0" />
-    <Rectangle arcHeight="5.0" arcWidth="5.0" height="154.0" layoutX="147.0" onMouseClicked="#jouerReDiese" stroke="BLACK" strokeType="INSIDE" width="32.0" />
-    <Rectangle arcHeight="5.0" arcWidth="5.0" height="154.0" layoutX="194.0" onMouseClicked="#jouerFaDiese" stroke="BLACK" strokeType="INSIDE" width="32.0" />
-    <Rectangle arcHeight="5.0" arcWidth="5.0" height="154.0" layoutX="241.0" onMouseClicked="#jouerSolDiese" stroke="BLACK" strokeType="INSIDE" width="32.0" />
+    <Rectangle fx:id="Do" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="280.0" onMouseClicked="#jouerNotes" stroke="BLACK" strokeType="INSIDE" width="42.0" />
+    <Rectangle fx:id="Re" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="280.0" layoutX="42.0" onMouseClicked="#jouerNotes" stroke="BLACK" strokeType="INSIDE" width="42.0" />
+    <Rectangle fx:id="Mi" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="280.0" layoutX="84.0" onMouseClicked="#jouerNotes" stroke="BLACK" strokeType="INSIDE" width="42.0" />
+    <Rectangle fx:id="Fa" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="280.0" layoutX="126.0" onMouseClicked="#jouerNotes" stroke="BLACK" strokeType="INSIDE" width="42.0" />
+    <Rectangle fx:id="Sol" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="280.0" layoutX="168.0" onMouseClicked="#jouerNotes" stroke="BLACK" strokeType="INSIDE" width="42.0" />
+    <Rectangle fx:id="La" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="280.0" layoutX="210.0" onMouseClicked="#jouerNotes" stroke="BLACK" strokeType="INSIDE" width="42.0" />
+    <Rectangle fx:id="Si" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="280.0" layoutX="252.0" onMouseClicked="#jouerNotes" stroke="BLACK" strokeType="INSIDE" width="42.0" />
+    <Rectangle fx:id="ReDiese" arcHeight="5.0" arcWidth="5.0" height="154.0" layoutX="73.0" onMouseClicked="#jouerNotes" stroke="BLACK" strokeType="INSIDE" width="32.0" />
+    <Rectangle fx:id="DoDiese" arcHeight="5.0" arcWidth="5.0" height="154.0" layoutX="21.0" onMouseClicked="#jouerNotes" stroke="BLACK" strokeType="INSIDE" width="32.0" />
+    <Rectangle fx:id="FaDiese" arcHeight="5.0" arcWidth="5.0" height="154.0" layoutX="147.0" onMouseClicked="#jouerNotes" stroke="BLACK" strokeType="INSIDE" width="32.0" />
+    <Rectangle fx:id="SolDiese" arcHeight="5.0" arcWidth="5.0" height="154.0" layoutX="194.0" onMouseClicked="#jouerNotes" stroke="BLACK" strokeType="INSIDE" width="32.0" />
+    <Rectangle fx:id="LaDiese" arcHeight="5.0" arcWidth="5.0" height="154.0" layoutX="241.0" onMouseClicked="#jouerNotes" stroke="BLACK" strokeType="INSIDE" width="32.0" />
    <Button layoutY="280.0" mnemonicParsing="false" onMouseClicked="#jouerSilence" prefHeight="32.0" prefWidth="294.0" text="Chuuuuuuut" />
 </AnchorPane>
