--- a/arezzo/src/vues/instruments.fxml
+++ b/arezzo/src/vues/instruments.fxml
@@ -2,20 +2,61 @@
 
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
 
-<AnchorPane prefHeight="284.0" prefWidth="150.0" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ecouteur.EcouteurInstruments">
+<AnchorPane prefHeight="284.0" prefWidth="265.0" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ecouteur.EcouteurInstruments">
    <children>
       <ChoiceBox fx:id="boxInstruments" layoutY="0.0" prefWidth="150.0" />
-      <RadioButton fx:id="aigu" layoutX="6.0" layoutY="57.0" mnemonicParsing="false" onAction="#setAigu" text="Aigu" />
-      <RadioButton fx:id="medium" layoutX="6.0" layoutY="81.0" mnemonicParsing="false" onAction="#setMedium" selected="true" text="Medium" />
-      <RadioButton fx:id="grave" layoutX="6.0" layoutY="106.0" mnemonicParsing="false" onAction="#setGrave" text="Grave" />
+      <RadioButton fx:id="aigu" layoutX="6.0" layoutY="57.0" mnemonicParsing="false" onAction="#setHauteur" text="Aigu">
+         <toggleGroup>
+            <ToggleGroup fx:id="groupHauteurs" />
+         </toggleGroup></RadioButton>
+      <RadioButton fx:id="medium" layoutX="6.0" layoutY="81.0" mnemonicParsing="false" onAction="#setHauteur" selected="true" text="Medium" toggleGroup="$groupHauteurs" />
+      <RadioButton fx:id="grave" layoutX="6.0" layoutY="106.0" mnemonicParsing="false" onAction="#setHauteur" text="Grave" toggleGroup="$groupHauteurs" />
       <Line endX="50.0" layoutX="100.0" layoutY="50.0" startX="-100.0" />
       <Line endX="50.0" layoutX="100.0" layoutY="133.0" startX="-100.0" />
-      <RadioButton fx:id="ronde" layoutX="7.0" layoutY="142.0" mnemonicParsing="false" onAction="#setRonde" />
-      <RadioButton fx:id="blanche" layoutX="7.0" layoutY="167.0" mnemonicParsing="false" onAction="#setBlanche" />
-      <RadioButton fx:id="noire" layoutX="7.0" layoutY="192.0" mnemonicParsing="false" onAction="#setNoire" />
-      <RadioButton fx:id="croche" layoutX="7.0" layoutY="217.0" mnemonicParsing="false" onAction="#setCroche" selected="true" />
+      <RadioButton fx:id="ronde" layoutX="7.0" layoutY="142.0" mnemonicParsing="false" onAction="#setDuree">
+         <toggleGroup>
+            <ToggleGroup fx:id="groupDuree" />
+         </toggleGroup>
+         <graphic>
+            <ImageView fitHeight="15.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/ronde.png" />
+               </image>
+            </ImageView>
+         </graphic></RadioButton>
+      <RadioButton fx:id="blanche" layoutX="7.0" layoutY="167.0" mnemonicParsing="false" onAction="#setDuree" toggleGroup="$groupDuree">
+         <graphic>
+            <ImageView fitHeight="30.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/blanche.png" />
+               </image>
+            </ImageView>
+         </graphic></RadioButton>
+      <RadioButton fx:id="noire" layoutX="7.0" layoutY="192.0" mnemonicParsing="false" onAction="#setDuree" toggleGroup="$groupDuree">
+         <graphic>
+            <ImageView fitHeight="30.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/noire.png" />
+               </image>
+            </ImageView>
+         </graphic></RadioButton>
+      <RadioButton fx:id="croche" layoutX="7.0" layoutY="217.0" mnemonicParsing="false" onAction="#setDuree" selected="true" toggleGroup="$groupDuree">
+         <graphic>
+            <ImageView fitHeight="30.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/croche.png" />
+               </image>
+            </ImageView>
+         </graphic></RadioButton>
+      <Line endY="284.0" layoutX="150.0" />
+      <Slider fx:id="tempo" blockIncrement="5.0" layoutX="168.0" layoutY="-2.0" max="220.0" min="40.0" minorTickCount="1" onMouseReleased="#setTempo" orientation="VERTICAL" prefHeight="285.0" prefWidth="16.0" showTickLabels="true" value="180.0" />
+      <Slider fx:id="volume" blockIncrement="5.0" layoutX="222.0" layoutY="-2.0" minorTickCount="1" onMouseReleased="#setVolume" orientation="VERTICAL" prefHeight="285.0" prefWidth="16.0" showTickLabels="true" value="80.0" />
    </children>
 </AnchorPane>
