--- a/arezzo/src/vues/VueInstruments.fxml
+++ b/arezzo/src/vues/VueInstruments.fxml
@@ -20,7 +20,7 @@
       <RadioButton fx:id="grave" layoutX="6.0" layoutY="106.0" mnemonicParsing="false" onAction="#setHauteur" text="Grave" toggleGroup="$groupHauteurs" />
       <Line endX="50.0" layoutX="100.0" layoutY="50.0" startX="-100.0" />
       <Line endX="50.0" layoutX="100.0" layoutY="133.0" startX="-100.0" />
-      <RadioButton fx:id="ronde" layoutX="7.0" layoutY="142.0" mnemonicParsing="false" onAction="#setDuree">
+      <RadioButton fx:id="ronde" alignment="BOTTOM_CENTER" layoutX="7.0" layoutY="142.0" mnemonicParsing="false" onAction="#setDuree">
          <toggleGroup>
             <ToggleGroup fx:id="groupDuree" />
          </toggleGroup>
@@ -31,7 +31,7 @@
                </image>
             </ImageView>
          </graphic></RadioButton>
-      <RadioButton fx:id="blanche" layoutX="7.0" layoutY="167.0" mnemonicParsing="false" onAction="#setDuree" toggleGroup="$groupDuree">
+      <RadioButton fx:id="blanche" alignment="BOTTOM_CENTER" layoutX="7.0" layoutY="160.0" mnemonicParsing="false" onAction="#setDuree" toggleGroup="$groupDuree">
          <graphic>
             <ImageView fitHeight="30.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -39,7 +39,7 @@
                </image>
             </ImageView>
          </graphic></RadioButton>
-      <RadioButton fx:id="noire" layoutX="7.0" layoutY="192.0" mnemonicParsing="false" onAction="#setDuree" toggleGroup="$groupDuree">
+      <RadioButton fx:id="noire" alignment="BOTTOM_CENTER" layoutX="7.0" layoutY="190.0" mnemonicParsing="false" onAction="#setDuree" toggleGroup="$groupDuree">
          <graphic>
             <ImageView fitHeight="30.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -47,7 +47,7 @@
                </image>
             </ImageView>
          </graphic></RadioButton>
-      <RadioButton fx:id="croche" layoutX="7.0" layoutY="217.0" mnemonicParsing="false" onAction="#setDuree" selected="true" toggleGroup="$groupDuree">
+      <RadioButton fx:id="croche" alignment="BOTTOM_CENTER" layoutX="7.0" layoutY="220.0" mnemonicParsing="false" onAction="#setDuree" selected="true" toggleGroup="$groupDuree">
          <graphic>
             <ImageView fitHeight="30.0" pickOnBounds="true" preserveRatio="true">
                <image>
