--- a/arezzo/src/vues/VuePlayEtNotes.fxml
+++ b/arezzo/src/vues/VuePlayEtNotes.fxml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="VuePlayEtNotes"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="297.0" prefWidth="147.0" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ecouteur.EcouteurPlayEtNotes">
+   <children>
+      <Button fx:id="play" layoutX="47.0" layoutY="49.0" mnemonicParsing="false" prefHeight="59.0" prefWidth="43.0">
+         <graphic>
+            <ImageView fitHeight="55.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/play.png" />
+               </image>
+            </ImageView>
+         </graphic></Button>
+      <Button layoutX="47.0" layoutY="194.0" mnemonicParsing="false" prefHeight="59.0" prefWidth="43.0">
+         <graphic>
+            <ImageView fitHeight="55.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/affichage.png" />
+               </image>
+            </ImageView>
+         </graphic></Button>
+   </children>
 </AnchorPane>
