--- a/arezzo/src/vues/VueMenu.fxml
+++ b/arezzo/src/vues/VueMenu.fxml
@@ -10,9 +10,18 @@
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="56.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ecouteur.EcouteurMenu">
     <MenuBar prefHeight="29.0" prefWidth="1000.0">
         <Menu mnemonicParsing="false" text="Melodie">
-            <MenuItem mnemonicParsing="false" onAction="#nouveauFichier" text="Nouveau" />
-            <MenuItem mnemonicParsing="false" onAction="#ouvrirFichier" text="Ouvrir" />
-            <MenuItem mnemonicParsing="false" onAction="#enregistrerSous" text="Enregistrer sous ..." />
+            <MenuItem mnemonicParsing="false" onAction="#nouveauFichier" text="Nouveau">
+            <accelerator>
+               <KeyCodeCombination alt="UP" code="N" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+            </accelerator></MenuItem>
+            <MenuItem mnemonicParsing="false" onAction="#ouvrirFichier" text="Ouvrir">
+            <accelerator>
+               <KeyCodeCombination alt="UP" code="O" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+            </accelerator></MenuItem>
+            <MenuItem mnemonicParsing="false" onAction="#enregistrerSous" text="Enregistrer sous ...">
+            <accelerator>
+               <KeyCodeCombination alt="UP" code="S" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+            </accelerator></MenuItem>
             <MenuItem mnemonicParsing="false" onAction="#quitterFenetre" text="Quitter">
                 <accelerator>
                     <KeyCodeCombination alt="UP" code="Q" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
