--- a/arezzo/src/vues/VueInstruments.fxml
+++ b/arezzo/src/vues/VueInstruments.fxml
@@ -9,29 +9,29 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
 
-<AnchorPane prefHeight="284.0" prefWidth="265.0" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ecouteur.EcouteurInstruments">
+<AnchorPane prefHeight="297.0" prefWidth="330.0" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ecouteur.EcouteurInstruments">
    <children>
-      <ChoiceBox fx:id="boxInstruments" layoutY="0.0" prefWidth="150.0" />
-      <RadioButton fx:id="aigu" layoutX="6.0" layoutY="57.0" mnemonicParsing="false" onAction="#setHauteur" text="Aigu">
+      <ChoiceBox fx:id="boxInstruments" layoutX="71.0" layoutY="1.0" prefWidth="150.0" />
+      <RadioButton fx:id="aigu" layoutX="83.0" layoutY="57.0" mnemonicParsing="false" onAction="#setHauteur" text="Aigu">
          <toggleGroup>
             <ToggleGroup fx:id="groupHauteurs" />
          </toggleGroup></RadioButton>
-      <RadioButton fx:id="medium" layoutX="6.0" layoutY="81.0" mnemonicParsing="false" onAction="#setHauteur" selected="true" text="Medium" toggleGroup="$groupHauteurs" />
-      <RadioButton fx:id="grave" layoutX="6.0" layoutY="106.0" mnemonicParsing="false" onAction="#setHauteur" text="Grave" toggleGroup="$groupHauteurs" />
-      <Line endX="50.0" layoutX="100.0" layoutY="50.0" startX="-100.0" />
-      <Line endX="50.0" layoutX="100.0" layoutY="133.0" startX="-100.0" />
-      <RadioButton fx:id="ronde" alignment="BOTTOM_CENTER" layoutX="7.0" layoutY="142.0" mnemonicParsing="false" onAction="#setDuree">
+      <RadioButton fx:id="medium" layoutX="83.0" layoutY="81.0" mnemonicParsing="false" onAction="#setHauteur" selected="true" text="Medium" toggleGroup="$groupHauteurs" />
+      <RadioButton fx:id="grave" layoutX="83.0" layoutY="106.0" mnemonicParsing="false" onAction="#setHauteur" text="Grave" toggleGroup="$groupHauteurs" />
+      <Line endX="50.0" layoutX="171.0" layoutY="49.0" startX="-100.0" />
+      <Line endX="50.0" layoutX="171.0" layoutY="133.0" startX="-100.0" />
+      <RadioButton fx:id="ronde" alignment="BOTTOM_CENTER" layoutX="83.0" layoutY="142.0" mnemonicParsing="false" onAction="#setDuree">
          <toggleGroup>
             <ToggleGroup fx:id="groupDuree" />
          </toggleGroup>
          <graphic>
-            <ImageView fitHeight="15.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="15.0" layoutX="71.0" layoutY="220.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/ronde.png" />
                </image>
             </ImageView>
          </graphic></RadioButton>
-      <RadioButton fx:id="blanche" alignment="BOTTOM_CENTER" layoutX="7.0" layoutY="160.0" mnemonicParsing="false" onAction="#setDuree" toggleGroup="$groupDuree">
+      <RadioButton fx:id="blanche" alignment="BOTTOM_CENTER" layoutX="83.0" layoutY="160.0" mnemonicParsing="false" onAction="#setDuree" toggleGroup="$groupDuree">
          <graphic>
             <ImageView fitHeight="30.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -39,7 +39,7 @@
                </image>
             </ImageView>
          </graphic></RadioButton>
-      <RadioButton fx:id="noire" alignment="BOTTOM_CENTER" layoutX="7.0" layoutY="190.0" mnemonicParsing="false" onAction="#setDuree" toggleGroup="$groupDuree">
+      <RadioButton fx:id="noire" alignment="BOTTOM_CENTER" layoutX="83.0" layoutY="190.0" mnemonicParsing="false" onAction="#setDuree" toggleGroup="$groupDuree">
          <graphic>
             <ImageView fitHeight="30.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -47,7 +47,7 @@
                </image>
             </ImageView>
          </graphic></RadioButton>
-      <RadioButton fx:id="croche" alignment="BOTTOM_CENTER" layoutX="7.0" layoutY="220.0" mnemonicParsing="false" onAction="#setDuree" selected="true" toggleGroup="$groupDuree">
+      <RadioButton fx:id="croche" alignment="BOTTOM_CENTER" layoutX="83.0" layoutY="220.0" mnemonicParsing="false" onAction="#setDuree" selected="true" toggleGroup="$groupDuree">
          <graphic>
             <ImageView fitHeight="30.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -55,8 +55,11 @@
                </image>
             </ImageView>
          </graphic></RadioButton>
-      <Line endY="284.0" layoutX="150.0" />
-      <Slider fx:id="tempo" blockIncrement="5.0" layoutX="168.0" layoutY="-2.0" max="220.0" min="40.0" minorTickCount="1" onMouseReleased="#setTempo" orientation="VERTICAL" prefHeight="285.0" prefWidth="16.0" showTickLabels="true" value="180.0" />
-      <Slider fx:id="volume" blockIncrement="5.0" layoutX="222.0" layoutY="-2.0" minorTickCount="1" onMouseReleased="#setVolume" orientation="VERTICAL" prefHeight="285.0" prefWidth="16.0" showTickLabels="true" value="80.0" />
+      <Line endY="297.0" layoutX="221.0" />
+      <Line endY="297.0" layoutX="71.0" />
+      <Slider fx:id="tempo" blockIncrement="5.0" layoutX="245.0" max="220.0" min="40.0" minorTickCount="1" onMouseReleased="#setTempo" orientation="VERTICAL" prefHeight="285.0" prefWidth="1.0" showTickLabels="true" value="180.0" />
+      <Slider fx:id="volume" blockIncrement="5.0" layoutX="300.0" minorTickCount="1" onMouseReleased="#setVolume" orientation="VERTICAL" prefHeight="285.0" prefWidth="16.0" showTickLabels="true" value="80.0" />
+      <Line endX="221.0" startX="71.0" />
+      <Line endX="221.0" endY="297.0" startX="71.0" startY="297.0" />
    </children>
 </AnchorPane>
