Enregistrer une mélodie en json.

--- a/arezzo/src/vues/VueMenu.fxml
+++ b/arezzo/src/vues/VueMenu.fxml
@@ -18,7 +18,7 @@
             <accelerator>
                <KeyCodeCombination alt="UP" code="O" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
             </accelerator></MenuItem>
-            <MenuItem mnemonicParsing="false" onAction="#enregistrerSous" text="Enregistrer sous ...">
+            <MenuItem fx:id="save" mnemonicParsing="false" onAction="#enregistrerSous" text="Enregistrer sous ...">
             <accelerator>
                <KeyCodeCombination alt="UP" code="S" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
             </accelerator></MenuItem>
