--- a/arezzo/src/vues/VuePiano.fxml
+++ b/arezzo/src/vues/VuePiano.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 
 <AnchorPane prefHeight="297.0" prefWidth="588.0" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ecouteur.EcouteurPiano">
-    <Rectangle fx:id="Do" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="280.0" onMouseClicked="#jouerNotes" stroke="BLACK" strokeType="INSIDE" width="84.0" />
+   <Rectangle fx:id="Do" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="280.0" onMouseClicked="#jouerNotes" stroke="BLACK" strokeType="INSIDE" width="84.0" />
     <Rectangle fx:id="Re" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="280.0" layoutX="84.0" onMouseClicked="#jouerNotes" stroke="BLACK" strokeType="INSIDE" width="84.0" />
     <Rectangle fx:id="Mi" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="280.0" layoutX="168.0" onMouseClicked="#jouerNotes" stroke="BLACK" strokeType="INSIDE" width="84.0" />
     <Rectangle fx:id="Fa" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="280.0" layoutX="252.0" onMouseClicked="#jouerNotes" stroke="BLACK" strokeType="INSIDE" width="84.0" />
@@ -18,4 +19,11 @@
     <Rectangle fx:id="SolDiese" arcHeight="5.0" arcWidth="5.0" height="154.0" layoutX="388.0" onMouseClicked="#jouerNotes" stroke="BLACK" strokeType="INSIDE" width="64.0" />
     <Rectangle fx:id="LaDiese" arcHeight="5.0" arcWidth="5.0" height="154.0" layoutX="482.0" onMouseClicked="#jouerNotes" stroke="BLACK" strokeType="INSIDE" width="64.0" />
    <Button layoutY="280.0" mnemonicParsing="false" onMouseClicked="#jouerSilence" prefHeight="32.0" prefWidth="588.0" text="Chuuuuuuut" />
+   <Label layoutX="33.0" layoutY="235.0" text="Do" />
+   <Label layoutX="117.0" layoutY="235.0" text="Re" />
+   <Label layoutX="204.0" layoutY="235.0" text="Mi" />
+   <Label layoutX="286.0" layoutY="235.0" text="Fa" />
+   <Label layoutX="540.0" layoutY="237.0" text="Si" />
+   <Label layoutX="454.0" layoutY="237.0" text="La" />
+   <Label layoutX="368.0" layoutY="237.0" text="Sol" />
 </AnchorPane>
