--- a/arezzo/src/vues/VuePlayEtNotes.fxml
+++ b/arezzo/src/vues/VuePlayEtNotes.fxml
@@ -6,14 +6,24 @@
 
 <AnchorPane prefHeight="297.0" prefWidth="100.0" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ecouteur.EcouteurPlayEtNotes">
    <children>
-      <ImageView fitHeight="55.0" fitWidth="35.0" layoutX="28.0" layoutY="155.0" onMouseClicked="#affichageNotes" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="55.0" fitWidth="35.0" layoutX="30.0" layoutY="160.0" onMouseClicked="#stopMelodie" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@images/affichage.png" />
+            <Image url="@images/stop.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="55.0" fitWidth="35.0" layoutX="28.0" layoutY="98.0" onMouseClicked="#playMelodie" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="55.0" fitWidth="35.0" layoutX="30.0" layoutY="100.0" onMouseClicked="#playMelodie" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@images/play.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="55.0" fitWidth="35.0" layoutX="30.0" layoutY="40.0" onMouseClicked="#deleteMelodie" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@images/delete.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="affichage" fitHeight="55.0" fitWidth="35.0" layoutX="30.0" layoutY="220.0" onMouseClicked="#affichageNotes" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@images/affichage.png" />
          </image>
       </ImageView>
    </children>
