--- a/arezzo/src/vues/VueMenu.fxml
+++ b/arezzo/src/vues/VueMenu.fxml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.input.KeyCodeCombination?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.input.*?>
+<?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="56.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ecouteur.EcouteurMenu">
-    <MenuBar prefHeight="29.0" prefWidth="1000.0">
+<Pane fx:id="fenetreMenu" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="56.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ecouteur.EcouteurMenu">
+    <MenuBar fx:id="affichageMenu" prefHeight="29.0" prefWidth="1000.0">
         <Menu mnemonicParsing="false" text="Melodie">
             <MenuItem mnemonicParsing="false" onAction="#nouveauFichier" text="Nouveau">
             <accelerator>
@@ -18,7 +15,7 @@
             <accelerator>
                <KeyCodeCombination alt="UP" code="O" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
             </accelerator></MenuItem>
-            <MenuItem fx:id="save" mnemonicParsing="false" onAction="#enregistrerSous" text="Enregistrer sous ...">
+            <MenuItem mnemonicParsing="false" onAction="#enregistrerSous" text="Enregistrer sous ...">
             <accelerator>
                <KeyCodeCombination alt="UP" code="S" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
             </accelerator></MenuItem>
