--- a/arezzo/src/vues/VuePiano.fxml
+++ b/arezzo/src/vues/VuePiano.fxml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
 
-<AnchorPane prefHeight="297.0" prefWidth="588.0" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ecouteur.EcouteurPiano">
+<AnchorPane prefHeight="297.0" prefWidth="588.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ecouteur.EcouteurPiano">
    <Rectangle fx:id="Do" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="280.0" onMouseClicked="#jouerNotes" stroke="BLACK" strokeType="INSIDE" width="84.0" />
     <Rectangle fx:id="Re" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="280.0" layoutX="84.0" onMouseClicked="#jouerNotes" stroke="BLACK" strokeType="INSIDE" width="84.0" />
     <Rectangle fx:id="Mi" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="280.0" layoutX="168.0" onMouseClicked="#jouerNotes" stroke="BLACK" strokeType="INSIDE" width="84.0" />
@@ -18,7 +17,7 @@
     <Rectangle fx:id="FaDiese" arcHeight="5.0" arcWidth="5.0" height="154.0" layoutX="294.0" onMouseClicked="#jouerNotes" stroke="BLACK" strokeType="INSIDE" width="64.0" />
     <Rectangle fx:id="SolDiese" arcHeight="5.0" arcWidth="5.0" height="154.0" layoutX="388.0" onMouseClicked="#jouerNotes" stroke="BLACK" strokeType="INSIDE" width="64.0" />
     <Rectangle fx:id="LaDiese" arcHeight="5.0" arcWidth="5.0" height="154.0" layoutX="482.0" onMouseClicked="#jouerNotes" stroke="BLACK" strokeType="INSIDE" width="64.0" />
-   <Button layoutY="280.0" mnemonicParsing="false" onMouseClicked="#jouerSilence" prefHeight="32.0" prefWidth="588.0" text="Chuuuuuuut" />
+   <Button fx:id="chut" layoutY="280.0" mnemonicParsing="false" onMouseClicked="#jouerSilence" prefHeight="32.0" prefWidth="588.0" text="Chuuuuuuut" />
    <Label layoutX="35.0" layoutY="235.0" text="Do" />
    <Label layoutX="117.0" layoutY="235.0" text="Re" />
    <Label layoutX="204.0" layoutY="235.0" text="Mi" />
