--- a/arezzo/src/vues/VuePlayEtNotes.fxml
+++ b/arezzo/src/vues/VuePlayEtNotes.fxml
@@ -1,30 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="297.0" prefWidth="100.0" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ecouteur.EcouteurPlayEtNotes">
-   <children>
-      <ImageView fitHeight="60.0" fitWidth="40.0" layoutX="28.5" layoutY="160.0" onMouseClicked="#stopMelodie" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@images/stop.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="55.0" fitWidth="35.0" layoutX="30.0" layoutY="100.0" onMouseClicked="#playMelodie" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@images/play.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="50.0" fitWidth="30.0" layoutX="32.5" layoutY="40.0" onMouseClicked="#deleteMelodie" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@images/delete.png" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="affichage" fitHeight="55.0" fitWidth="35.0" layoutX="30.0" layoutY="220.0" onMouseClicked="#affichageNotes" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@images/affichage.png" />
-         </image>
-      </ImageView>
-   </children>
+<AnchorPane fx:id="fenetrePlay" prefHeight="297.0" prefWidth="138.0" xmlns="http://javafx.com/javafx/16"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="ecouteur.EcouteurPlayEtNotes">
+   <ImageView fx:id="stop" fitHeight="60.0" fitWidth="40.0" layoutX="28.5" layoutY="160.0" onMouseClicked="#stopMelodie"
+              pickOnBounds="true" preserveRatio="true">
+      <Image url="@images/stop.png"/>
+   </ImageView>
+   <ImageView fx:id="play" fitHeight="55.0" fitWidth="35.0" layoutX="30.0" layoutY="100.0" onMouseClicked="#playMelodie"
+              pickOnBounds="true" preserveRatio="true">
+      <Image url="@images/play.png"/>
+   </ImageView>
+   <ImageView fx:id="delete" fitHeight="55.0" fitWidth="35.0" layoutX="30.0" layoutY="40.0"
+              onMouseClicked="#deleteMelodie" pickOnBounds="true" preserveRatio="true">
+      <Image url="@images/delete.png"/>
+   </ImageView>
+   <ImageView fx:id="affichage" fitHeight="55.0" fitWidth="35.0" layoutX="30.0" layoutY="220.0"
+              onMouseClicked="#affichageNotes" pickOnBounds="true" preserveRatio="true">
+      <Image url="@images/affichage.png"/>
+   </ImageView>
 </AnchorPane>
