Ajout d'éléments de style. Ajout des tests manquants.

--- a/arezzo/src/vues/VueInstruments.fxml
+++ b/arezzo/src/vues/VueInstruments.fxml
@@ -5,68 +5,58 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.*?>
 
-<AnchorPane fx:id="fenetreInstruments" prefHeight="312.0" prefWidth="274.0" xmlns="http://javafx.com/javafx/16"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="ecouteur.EcouteurInstruments">
-   <ChoiceBox fx:id="boxInstruments" layoutX="120.0" layoutY="40.0" prefWidth="150.0"/>
-   <RadioButton layoutX="124.0" layoutY="73.0" mnemonicParsing="false" onAction="#setHauteur" text="Aigu">
+<AnchorPane fx:id="fenetreInstruments" prefHeight="312.0" prefWidth="274.0" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ecouteur.EcouteurInstruments">
+   <ChoiceBox fx:id="boxInstruments" layoutX="120.0" layoutY="40.0" prefWidth="150.0" />
+   <RadioButton fx:id="aigu" layoutX="124.0" layoutY="73.0" mnemonicParsing="false" onAction="#setHauteur" text="Aigu">
       <toggleGroup>
-         <ToggleGroup fx:id="groupHauteurs"/>
+         <ToggleGroup fx:id="groupHauteurs" />
       </toggleGroup>
    </RadioButton>
-   <RadioButton fx:id="medium" layoutX="124.0" layoutY="93.0" mnemonicParsing="false" onAction="#setHauteur"
-                selected="true" text="Medium" toggleGroup="$groupHauteurs"/>
-   <RadioButton layoutX="124.0" layoutY="113.0" mnemonicParsing="false" onAction="#setHauteur"
-                text="Grave" toggleGroup="$groupHauteurs"/>
-   <Line endX="150.0" endY="16.0" layoutX="120.0" layoutY="49.0" startY="16.0"/>
-   <Line endX="150.0" layoutX="120.0" layoutY="135.0"/>
-   <RadioButton alignment="BOTTOM_CENTER" layoutX="124.0" layoutY="142.0" mnemonicParsing="false"
-                onAction="#setDuree">
+   <RadioButton fx:id="medium" layoutX="124.0" layoutY="93.0" mnemonicParsing="false" onAction="#setHauteur" selected="true" text="Medium" toggleGroup="$groupHauteurs" />
+   <RadioButton fx:id="grave" layoutX="124.0" layoutY="113.0" mnemonicParsing="false" onAction="#setHauteur" text="Grave" toggleGroup="$groupHauteurs" />
+   <Line endX="150.0" endY="16.0" layoutX="120.0" layoutY="49.0" startY="16.0" />
+   <Line endX="150.0" layoutX="120.0" layoutY="135.0" />
+   <RadioButton fx:id="ronde" alignment="BOTTOM_CENTER" layoutX="124.0" layoutY="142.0" mnemonicParsing="false" onAction="#setDuree">
       <toggleGroup>
-         <ToggleGroup fx:id="groupDuree"/>
+         <ToggleGroup fx:id="groupDuree" />
       </toggleGroup>
       <graphic>
          <ImageView fitHeight="15.0" layoutX="120.0" layoutY="220.0" pickOnBounds="true" preserveRatio="true">
-            <Image url="@images/ronde.png"/>
+            <Image url="@images/ronde.png" />
          </ImageView>
       </graphic>
    </RadioButton>
-   <RadioButton alignment="BOTTOM_CENTER" layoutX="124.0" layoutY="160.0" mnemonicParsing="false"
-                onAction="#setDuree" toggleGroup="$groupDuree">
+   <RadioButton fx:id="blanche" alignment="BOTTOM_CENTER" layoutX="124.0" layoutY="160.0" mnemonicParsing="false" onAction="#setDuree" toggleGroup="$groupDuree">
       <graphic>
          <ImageView fitHeight="30.0" pickOnBounds="true" preserveRatio="true">
-            <Image url="@images/blanche.png"/>
+            <Image url="@images/blanche.png" />
          </ImageView>
       </graphic>
    </RadioButton>
-   <RadioButton alignment="BOTTOM_CENTER" layoutX="124.0" layoutY="190.0" mnemonicParsing="false"
-                onAction="#setDuree" toggleGroup="$groupDuree">
+   <RadioButton fx:id="noire" alignment="BOTTOM_CENTER" layoutX="124.0" layoutY="190.0" mnemonicParsing="false" onAction="#setDuree" toggleGroup="$groupDuree">
       <graphic>
          <ImageView fitHeight="30.0" pickOnBounds="true" preserveRatio="true">
-            <Image url="@images/noire.png"/>
+            <Image url="@images/noire.png" />
          </ImageView>
       </graphic>
    </RadioButton>
-   <RadioButton fx:id="croche" alignment="BOTTOM_CENTER" layoutX="124.0" layoutY="220.0" mnemonicParsing="false"
-                onAction="#setDuree" selected="true" toggleGroup="$groupDuree">
+   <RadioButton fx:id="croche" alignment="BOTTOM_CENTER" layoutX="124.0" layoutY="220.0" mnemonicParsing="false" onAction="#setDuree" selected="true" toggleGroup="$groupDuree">
       <graphic>
          <ImageView fitHeight="30.0" pickOnBounds="true" preserveRatio="true">
-            <Image url="@images/croche.png"/>
+            <Image url="@images/croche.png" />
          </ImageView>
       </graphic>
    </RadioButton>
-   <Line endY="273.0" layoutX="270.0" startY="39.0"/>
-   <Line endY="273.0" layoutX="120.0" startY="39.0"/>
-   <Slider fx:id="tempo" blockIncrement="5.0" layoutX="31.0" max="220.0" min="40.0" minorTickCount="1"
-           onMouseReleased="#setTempoSlider" orientation="VERTICAL" prefHeight="285.0" prefWidth="1.0"
-           showTickLabels="true" value="180.0"/>
-   <Slider fx:id="volume" blockIncrement="5.0" layoutX="81.0" minorTickCount="1" onMouseReleased="#setVolume"
-           orientation="VERTICAL" prefHeight="285.0" prefWidth="16.0" showTickLabels="true" value="80.0"/>
-   <Line endX="270.0" endY="39.0" startX="120.0" startY="39.0"/>
-   <Line endX="270.0" endY="273.0" startX="120.0" startY="273.0"/>
+   <Line endY="273.0" layoutX="270.0" startY="39.0" />
+   <Line endY="273.0" layoutX="120.0" startY="39.0" />
+   <Slider fx:id="tempo" blockIncrement="5.0" layoutX="31.0" max="220.0" min="40.0" minorTickCount="1" onMouseReleased="#setTempoSlider" orientation="VERTICAL" prefHeight="285.0" prefWidth="1.0" showTickLabels="true" value="180.0" />
+   <Slider fx:id="volume" blockIncrement="5.0" layoutX="81.0" minorTickCount="1" onMouseReleased="#setVolume" orientation="VERTICAL" prefHeight="285.0" prefWidth="16.0" showTickLabels="true" value="80.0" />
+   <Line endX="270.0" endY="39.0" startX="120.0" startY="39.0" />
+   <Line endX="270.0" endY="273.0" startX="120.0" startY="273.0" />
    <ImageView fitHeight="18.0" fitWidth="16.0" layoutX="76.0" layoutY="288.0" pickOnBounds="true" preserveRatio="true">
-      <Image url="@images/volume.png"/>
+      <Image url="@images/volume.png" />
    </ImageView>
    <ImageView fitHeight="18.0" fitWidth="16.0" layoutX="26.0" layoutY="288.0" pickOnBounds="true" preserveRatio="true">
-      <Image url="@images/tempo.png"/>
+      <Image url="@images/tempo.png" />
    </ImageView>
 </AnchorPane>
